versioned_docs/version-2.5/client-api/set-based-operations.mdx
---
title: "Set based operations"
hide_table_of_contents: true
sidebar_label: Set based operations
sidebar_position: 5
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Set based operations

Sometimes we need to update or delete a large amount of documents answering some criteria. With SQL this is a natural operation, and a query doing that will look like this:

    DELETE FROM Users WHERE LastLogin &lt; '2009-01-01'
    UPDATE Users SET IsActive = 0 WHERE LastLogin &lt; '2010-01-01'

This is usually not the case for NoSQL databases, where batch operations are not supported. RavenDB does support this, and by passing it a query and an operation definition, it will run the query and perform that operation on it's results.

The same queries and indexes that are used for data retrieval are used for the batch operations, therefore the syntax for defining which documents to do work on is exactly the same as you'd specify for those documents to be pulled from store.

## The Delete operation

To issue a batch-delete command you need to specify an index, and a query to be sent to it. To minimize the chances of stale results coming back, bulk operations should only be performed on static indexes:

<TabItem value="setbased1" label="setbased1">
<CodeBlock language="csharp">
{`documentStore.DatabaseCommands.DeleteByIndex("IndexName",
											 new IndexQuery
											 \{
												 Query = "Title:RavenDB" // where entity.Title contains RavenDB
											 \}, allowStale: false);
`}
</CodeBlock>
</TabItem>

## The Update operation (Patching API)

Performing a mass-update is exactly the same as making a mass-delete, but this time it uses the [Patching API](partial-document-updates) to make it easy for us to define what to do with the documents matching our query:

<TabItem value="setbased2" label="setbased2">
<CodeBlock language="csharp">
{`documentStore.DatabaseCommands.UpdateByIndex("IndexName",
											 new IndexQuery \{ Query = "Title:RavenDB" \},
											 new[]
                                             	\{
                                             		new PatchRequest
                                             			\{
                                             				Type = PatchCommandType.Add,
                                             				Name = "Comments",
                                             				Value = "New automatic comment we added programmatically"
                                             			\}
                                             	\}, allowStale: false);
`}
</CodeBlock>
</TabItem>

## Complex Set-based update operations using ScriptedPatchRequest
As the `ScriptedPatchRequest` is part of the [Patching API](partial-document-updates), it can also be used on Set-based operations:

<TabItem value="scripted1" label="scripted1">
<CodeBlock language="csharp">
{`// Replace FirstName and LastName properties by FullName property
documentStore.DatabaseCommands.UpdateByIndex(
	"Raven/DocumentsByEntityName",
	new IndexQuery \{ Query = "Tag:Users" \},
	new ScriptedPatchRequest()
	\{
		Script = @"
			this.FullName = this.FirstName + ' ' + this.LastName;
			delete this.FirstName;
			delete this.LastName;
		"
	\}
	);
`}
</CodeBlock>
</TabItem>

## Set-based operations and stale indexes

By default, set-based operations will not work on indexes that are stale, and the operation will only succeed if the specified index is NOT stale. This is to make sure you only delete what you intended to delete, and is part of RavenDB's safe-by-default approach.

For indexes that are updated all the time, you can set a `Cutoff` in the `IndexQuery` object you send, and that will make sure the operation is executed and that you know what results to expect.

When you absolutely certain you can perform the operation also when the index is stale, simply set the `allowStale` parameter to true.